# weakagent

./: .gitignore  README.md  config.toml  config_example.toml  main.py  pyproject.toml
.cursor/rules/: Add-concise.mdc
examples/: 0_llm_demo.py  10_mcp_agent_demo.py  11_full_demo.py  2_multi_react_create_then_run_demo.py  3_brief_react_multi_runtime_loop_demo.py  4_researcg_agent_demo.py  5_scheduler_demo.py  6_adapter_demo.py  7_long_memory_demo.py  8_skills_demo.py  9_mcp_demo.py  agent_manager_demo.py  agent_runtime_demo.py  brief_react_multi_runtime_loop_demo.py  multi_react_demo.py  task_manager_demo.py
llm/: __init__.py  factory.py  llm.py
memory/: short.py
schemas/: agent.py  message.py  tool.py
skills/demo-skill/: SKILL.md
skills/tool-usage-skill/: SKILL.md
test/: test_BriefReActAgent.py  test_ChatAgent.py  test_ToolCallAgent.py
test/llm/: test_workingMemory.py
test/tools/: test_obj_detection.py  test_tool_use_agent.py
utils/: logger.py
weakagent/: __init__.py
weakagent/adapters/: input.py  output.py
weakagent/agent/: __init__.py  base.py  brief_react.py  chat.py  echo.py  factory.py  llm_errors.py  manager.py  multi_react.py  react.py  research_agent.py  run_modes.py  runtime.py  task_crud.py  toolcall.py
weakagent/config/: __init__.py  settings.py
weakagent/llm/: factory.py  llm.py  retry.py  summarize.py  token_counter.py
weakagent/mcp/: __init__.py  client.py  config.py  integration.py
weakagent/memory/: __init__.py  base.py  conversation.py  long.py  message.py  message_store.py  runtime_memory.py  runtime_session.py  session.py  short.py  working.py
weakagent/prompt/: __init__.py  brief_react.py  search.py  summary.py  toolcall.py
weakagent/scheduler/: __init__.py  base.py  (+3 more)
(+67 files in other folders)
