[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weakagent"
version = "0.1.2"
description = "Add brief react agent and summary tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["weakagent*"]
