[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weakagent"
version = "0.2.1"
description = "Introduce event-driven capabilities to weakagent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.32.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["weakagent*"]
