[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weakagent"
version = "0.2.5"
description = "Introduce scheduler and runtime session store to weakagent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.32.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.13.0",
    "googlesearch-python>=1.2.3",
    "ddgs>=9.5.0",
    "baidusearch>=1.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["weakagent*"]
